--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,7 +3,18 @@ $primaryColor : #55c57a;
 $primaryColorLighter : #7ed56f;
 $primaryColorDarker :#28b485;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
+
+
 $color-gray-light-1 : #f7f7f7;
+$color-gray-light-2 : #eee;
+
 
 $colorDarkGray : #777;
 $colorWhite : #fff;
