--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,6 +25,7 @@
         position: absolute;
         top: 40%;
         left: 50%;
+        //to fix the place of bottom
         transform: translate(-50%,-50%);
         text-align: center;
     }
