--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,8 @@
 @import"layout/header";
 
 @import "components/button";
+@import "components/bg-video";
 @import "components/compostion";
 @import "components/feature-box";
 @import "components/card";
+@import "components/story";
