--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,5 @@
 .btn{
-
+    &,
     &:link,
     &:visited{
         text-transform: uppercase;
@@ -9,6 +9,10 @@
         border-radius: 10rem;
         position: relative;
         font-size: $default-font-size;
+
+        //change from <button> element
+        border:none;
+        cursor: pointer;
     }
       
         &:hover{
@@ -21,7 +25,9 @@
             }
         }
     
-        &:active{
+        &:active,
+        :focus{
+            outline: none;
             transform: translateY(-1px);
             box-shadow: 0 .5rem 1rem rgba($colorBlack,.2);
         }
