--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,33 +1,53 @@
-.section-about{
-    background-color:$color-gray-light-1;
+.section-about {
+    background-color: $color-gray-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
 }
 
-.section-feature{
+.section-feature {
     padding: 20rem 0;
-    background-image: linear-gradient(
-        to right bottom ,
-        rgba($primaryColorDarker ,0.8),
-        rgba($primaryColorLighter,0.8)
-    ) 
-    ,url('..//img/nat-4.jpg');
+    background-image: linear-gradient(to right bottom,
+            rgba($primaryColorDarker, 0.8),
+            rgba($primaryColorLighter, 0.8)), url('../img/nat-4.jpg');
     background-size: cover;
     transform: skewY(-7deg);
     margin-top: -10rem;
 
-    & > *{
-        transform: skewY(7deg) ;
+    &>* {
+        transform: skewY(7deg);
     }
 }
 
-.section-tours{
-    background-color:$color-gray-light-1;
-    padding: 25rem  0 15rem 0;
+.section-tours {
+    background-color: $color-gray-light-1;
+    padding: 25rem 0 15rem 0;
     margin-top: -10rem;
 }
 
-.section-stories{
+.section-stories {
     position: relative;
     padding: 15rem 0;
+}
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, $primaryColorDarker, $primaryColorLighter);
+}
+
+.book {
+    background-image: linear-gradient(105deg ,
+                                     rgba($colorWhite, .9) 0%,
+                                     rgba($colorWhite, .9) 50%,
+                                    transparent 50%),
+                            url('../img/nat-10.jpg');
+    background-size:100%;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($colorBlack , .2);
+    height: 50rem;
+
+
+    &__form{
+        width: 50%;
+        padding: 6rem;
+    }
 }
