--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,12 +14,13 @@ $color-tertiary-dark: #5643fa;
 
 $color-gray-light-1 : #f7f7f7;
 $color-gray-light-2 : #eee;
-
+$color-gray-light-3 : #333;
 
 $colorDarkGray : #777;
 $colorDarkGray-2 : #999;
 $colorWhite : #fff;
 $colorBlack : #000;
+
 
 
 //FONT
