--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "pages/home";
 
+@import"layout//navigation";
 @import"layout/grid";
 @import"layout/header";
 @import"layout/footer";
@@ -20,3 +21,4 @@
 @import "components/card";
 @import "components/story";
 @import "components/_form";
+@import"components/popup";
