add media Querie

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -3,8 +3,17 @@
     margin: 0 auto;
 
     &:not(:last-child){
-        margin-bottom: $gutter-horizontal ;
+        margin-bottom: $gutter-vertical;
+
+        @include respond(tab-port) {
+           margin-bottom: $gutter-vertical-small;
+        }
     }
+
+    @include respond(tab-port) {
+       max-width: 50rem;
+       padding: 0 3rem
+     }
 
     @include clearfix;
 
@@ -15,8 +24,19 @@
 
         &:not(:last-child){
             margin-right: 6rem;
+
+            @include respond(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
         }
+
+        
+    @include respond(tab-port){
+        width: 100% !important;
     }
+
+  }
 
     .col-1-of-2{
         width: calc((100% - #{$gutter-horizontal})/2);
