--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,10 @@
     box-shadow: 0 1.5rem 4rem rgba($colorBlack , .15);
     transition: transform .3s; 
 
+    @include respond(tab-land){
+        padding: 2rem;
+    }
+
     &__icon{
         font-size: 6rem;
         margin-bottom: .5rem ;
@@ -15,6 +19,11 @@
         -webkit-background-clip: text;
         background-clip: text;
         color : transparent;
+
+        @include respond(tab-land){
+            margin-bottom: 0;
+        }
+    
     }
 
     
