--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -23,23 +23,45 @@
         transform: translate(-50% , -50%) scale(.25); 
         transition: all .4s .2s;
 
+        @include respond(tab-land){
+            width: 100%;
+        }
+
+        @include respond(tab-port){
+            text-align: center;
+        }
     }
 
     &__left{
      width: 33%;
      display:table-cell;
-    }
+
+     @include respond(tab-port){
+         width: 0%;
+     }
+
+  }
 
     &__right{
         width: 77%;
         display:table-cell;
         vertical-align:middle;
         padding: 3rem 5rem;
+
+        @include respond(tab-port){
+            width: 100%;
+            padding: 1.5rem;
+        }
     }
 
     &__img{
         width: 100%;
         display: block;
+
+    //  @include respond(tab-land){
+    //     width: 100%;
+    //     display: inline-block;
+    //  }
     }
 
     &__text{
@@ -51,6 +73,13 @@
         column-rule: 1px solid $color-gray-light-2;
         
         hyphens: manual;
+
+        @include respond(tab-port){
+            column-count: unset;
+            column-gap:unset;
+            column-rule: unset;
+            
+        }
     }
 
     //open states
