--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,18 @@
     padding: 10rem 0 ;
     font-size: 1.4rem;
 
+    @include respond(tab-port){
+        padding: 8rem 0;
+    }
+
     &__logo-box{
         text-align: center;
         margin-bottom: 8rem;
+
+        @include respond(tab-port){
+            margin-bottom: 6rem;
+        }
+
     }
 
     &__logo{
@@ -18,6 +27,11 @@
         border-top: 1px solid $colorDarkGray ;
         padding-top: 2rem;
         display: inline-block;
+
+        @include respond(tab-port){
+         width: 100%;
+         text-align: center;
+        }
     }
 
     &__list{
@@ -56,5 +70,10 @@
         padding: 2rem;
         width: 80%;
         float: right;
+
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+           }
     }
 }
