--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,11 @@
     background-color: $color-gray-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+
+    @include respond(tab-port){
+        padding: 20rem 0;
+    }
+
 }
 
 .section-feature {
@@ -16,22 +21,38 @@
     & > * {
         transform: skewY(7deg);
     }
+
+    @include respond(tab-port){
+        padding: 10rem 0;
+    }
 }
 
 .section-tours {
     background-color: $color-gray-light-1;
     padding: 25rem 0 15rem 0;
     margin-top: -10rem;
+
+    @include respond(tab-port){
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     position: relative;
     padding: 15rem 0;
+
+    @include respond(tab-port){
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $primaryColorDarker, $primaryColorLighter);
+
+    @include respond(tab-port){
+        padding: 10rem 0;
+    }
 }
 
 .book {
@@ -43,11 +64,39 @@
     background-size:100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($colorBlack , .2);
-    height: 50rem;
 
+    @include respond(tab-land){
+        background-image: linear-gradient(105deg ,
+                          rgba($colorWhite, .9) 0%,
+                          rgba($colorWhite, .9) 65%,
+                                   transparent 65%),
+                            url('../img/nat-10.jpg');
+          background-size:cover;
+          border-radius: 3px;
+          box-shadow: 0 1.5rem 4rem rgba($colorBlack , .2);
+    }
+
+    @include respond(tab-port){
+        background-image: linear-gradient(to right ,
+                          rgba($colorWhite, .9) 0%,
+                          rgba($colorWhite, .9) 100%,
+                                   transparent 0%),
+                            url('../img/nat-10.jpg');
+            background-size:cover;
+            border-radius: 3px;
+            box-shadow: 0 1.5rem 4rem rgba($colorBlack , .2);
+    }
 
     &__form{
         width: 50%;
         padding: 6rem;
+
+        @include respond(tab-land){
+            width: 65%;
+        }
+
+        @include respond(tab-port){
+            width: 100%;
+        }
     }
 }
