--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -57,6 +57,8 @@
         left: 0;
         z-index: 1500;
         opacity: 0;
+        visibility: hidden;
+        
 
         transition: all .8s cubic-bezier(0.68, -0.6, 0.32, 1.6);;
     }
@@ -106,8 +108,9 @@
     }
 
     &__checkbox:checked ~ &__nav{
-      opacity: 1;   
-        width: 100%;
+      opacity: 1;
+      visibility: visible;   
+      width: 100%;
     }
 
     //ICON
