--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -9,6 +9,11 @@
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
+ 
+    @supports (backdrop-filter: blur(10px)){
+        backdrop-filter: blur(10px);
+        background-color: rgba($colorBlack,.3);
+    }
 
 
     &__content{
