--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,6 +12,15 @@
     clip-path: polygon(0 0 , 100% 0 , 100% 75vh , 0 100%);
     position: relative;
 
+    @media only  screen and (min-resolution:120dpi) and (min-width:37.5em) ,
+    (min-width:125em){
+        background-image: linear-gradient(
+        to right bottom ,
+        rgba($primaryColorDarker ,0.8),
+        rgba($primaryColorLighter,0.8)) 
+        ,url('../img/hero.jpg');
+    }
+
     @include respond(phone) {
         clip-path: polygon(0 0 , 100% 0 , 100% 85vh , 0 100%);
      }
